# general_test_bench

./: .gitignore
.claude/: settings.json
config/ethercat_device_config/: topology.dyno2.template1.json  topology.dyno2.template2.json  topology.dyno2.template3.json  topology.dyno2.template4.json  topology.dyno2.template5.json  topology.dyno2.template6.json  topology.dyno2.template7.json  topology.example.json  topology.singlejoint1.json
config/novanta_register_list/: novanta_ethercat_registers_list.json
desktop_executables/: install_desktop.sh  install_joint_impact_prevention_testbench.sh  launch_dyno.sh  launch_joint_impact_prevention_testbench.sh
env_setup_scripts/: check_rt_env.sh  env_setup.sh  rt_setup_part2.sh
env_setup_scripts/archive/: bootstrap_venv_ecat.sh  run_ethercat_python.sh
src/dyno_test_scripts/: bode_tests.py  cogging_torque_compensation.py  encoder_linearization_test.py  internal_feedback_generator_test.py  thermal_cycle.py  torque_ramp.py  torque_ramp_2way.py
src/ecat_functional_tests/: drive_simple_speed_test1.cpp  drive_simple_speed_test2.cpp  dyno2_integrated_test1.cpp  dyno2_integrated_test2.cpp  el2004_output_hold.cpp  elm3002_data_read.cpp  elm3002_pdo_check.cpp
src/ecat_functional_tests/archive/: dyno_integrated_tests1.py  dyno_integrated_tests2.py  elm3002_data_read.py  elm3002_input_read.py  elm3002_pdo_check.py  elm3002_sdo_read.py
src/ethercat_core/: CMakeLists.txt  default_adapter_factory.hpp  loop.cpp  loop.hpp  master.cpp  master.hpp
src/ethercat_core/archive/: master.py
src/ethercat_core/archive/devices/beckhoff/elm3002/: __init__.py  adapter.py  data_types.py
src/ethercat_core/devices/beckhoff/elm3002/: adapter.cpp  adapter.hpp  data_types.hpp
src/ethercat_core/devices/motor_drives/Novanta/Volcano/: data_types.hpp  pdo.cpp  pdo.hpp
src/general_test_scripts/: inertia_estimation.py
src/interface_bridges/ros2/: CMakeLists.txt  bridge_ros2.cpp  build.sh  dyno_gui.py  dyno_plot.py  fastdds_no_shm.xml  pdo_log.hpp  run_gui.sh  run_plot.sh
src/interface_bridges/ros2/dyno_interface/: CMakeLists.txt  bridge_ros2.cpp  build.sh  dyno_gui.py  fastdds_no_shm.xml  package.xml  run_gui.sh
src/interface_bridges/ros2/dyno_interface/archive/: dyno_ros2_node.py
src/interface_bridges/ros2/joint_impact_prevention_testbench_interface/: CMakeLists.txt  bridge_ros2.cpp  build.sh  dyno_gui.py  dyno_plot.py  package.xml  pdo_log.hpp  run_gui.sh  run_plot.sh
src/interface_bridges/udp/: bridge_udp.cpp
src/testbenches/dual_novanta_testbench/: dual_novanta_testbench.cpp  dual_novanta_testbench.hpp
src/testbenches/joint_impact_prevention_testbench/: joint_impact_prevention_testbench.cpp  joint_impact_prevention_testbench.hpp
src/testbenches/joint_impact_prevention_testbench/feature_functions/: joint_braking.cpp  joint_braking.hpp
src/tools/: dyno_log_viewer.py  scan_soem.cpp
src/tools/archive/: scan_pysoem.py
src/tools/post_processing/bode_plot/: dyno_bode.py  dyno_bode_gui.py
src/tools/post_processing/cogging_compensation_analysis/: dyno_cogging_analysis.py  dyno_cogging_gui.py
src/tools/post_processing/encoder_linearization/: dyno_encoder_comp_write_gui.py  dyno_encoder_linearization_analysis.py  dyno_encoder_linearization_gui.py
src/tools/post_processing/inertia_estimation/: dyno_inertia_analysis.py  dyno_inertia_gui.py
src/tools/post_processing/kt_plot/: dyno_kt_analysis.py  dyno_kt_gui.py
